<resources>
    <string name="app_name">QiblaCompass</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">Lanjut</string>
    <string name="skip">Lewati</string>
    <string name="start">Paham :)</string>

    <string name="slide_1_title">Qibla Compass</string>
    <string name="slide_1_desc">Membantu anda untuk menentukan arah kiblat dengan benar disertai dengan background yang dapat menyesuaikan waktu</string>

    <string name="slide_2_title">Dibuat Oleh</string>
    <string name="slide_2_desc">Bacharuddin Adieb Pratama </string>
    <string name="slide_2_desc2">IrvinaFiradilla </string>
    <string name="slide_2_desc3">Monica Briliane Putri </string>
    <string name="slide_2_desc4">Siti Afiyah </string>
    <string name="slide_2_desc5">Vejryn Shaviero</string>

    <string name="slide_3_title">Kalibrasi Kompas</string>
    <string name="slide_3_desc">Kalibrasi kompas anda sebelum digunakan, menyesuaikan pola diatas</string>

    <string name="slide_4_title">All Done</string>
    <string name="slide_4_desc">Aplikasi untuk mempermudah sholatmu siap digunakan</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

</resources>
